# typst-bake

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  RELEASING.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: RELEASING.md  architecture.mmd
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/basic/templates/: main.typ
examples/compression-levels/: Cargo.toml
examples/compression-levels/src/: main.rs
examples/compression-levels/templates/: main.typ
examples/compression-levels/templates/content/: benchmark-data.typ  benchmarks.typ  caching.typ  configuration.typ  running.typ
examples/compression-levels/tests/: benchmark.rs
examples/font-guide/: Cargo.toml
examples/font-guide/templates/: main.typ
examples/output-formats/: Cargo.toml
examples/output-formats/src/: main.rs
examples/output-formats/templates/: main.typ
examples/quick-start/: Cargo.toml  build.rs
examples/quick-start/src/: main.rs
examples/quick-start/templates/: main.typ
examples/quick-start/templates/content/: stats.typ  step1.typ  step2.typ  step3.typ  step4.typ  step5.typ
examples/test-nested-entry/: Cargo.toml
examples/test-nested-entry/src/: main.rs
examples/test-nested-entry/templates/: root.txt
examples/test-nested-entry/templates/entry/: main.typ
examples/test-nested-entry/templates/entry/sub/: child.txt  child.typ
examples/test-nested-entry/templates/other/: sibling.txt  sibling.typ
examples/test-page-selection/: Cargo.toml
examples/test-page-selection/src/: main.rs
examples/test-page-selection/templates/: main.typ  numbers.typ
examples/with-files/: Cargo.toml
examples/with-files/templates/: main.typ
examples/with-files/templates/files/: csv_file.csv  json_file.json  toml_file.toml  txt_file.txt
examples/with-fonts/: Cargo.toml
examples/with-fonts/src/: main.rs
examples/with-image/: Cargo.toml
examples/with-image/src/: main.rs
examples/with-image/templates/: main.typ
examples/with-inputs/: Cargo.toml
examples/with-inputs/src/: main.rs
examples/with-inputs/templates/: main.typ
examples/with-package/: Cargo.toml
examples/with-package/src/: main.rs
examples/with-package/templates/: main.typ
examples/with-runtime-files/: Cargo.toml
examples/with-runtime-files/src/: main.rs
examples/with-runtime-files/templates/: main.typ
scripts/: deploy-examples.sh  deploy-gh-pages.sh  upload-examples.sh
typst-bake/: Cargo.toml
typst-bake-macros/: Cargo.toml
typst-bake-macros/src/: compression_cache.rs  config.rs  derive_intoval.rs  dir_embed.rs  downloader.rs  lib.rs  scanner.rs
typst-bake/src/: build.rs  document.rs  error.rs  lib.rs  pdf_config.rs  resolver.rs  stats.rs  util.rs
typst-bake/tests/: integration.rs
