[workspace]
members = [
    "typst-bake",
    "typst-bake-macros",
    "examples/font-guide",
    "examples/with-inputs",
    "examples/with-package",
    "examples/with-files",
    "examples/quick-start",
    "examples/output-formats",
    "examples/compression-levels",
]
resolver = "2"

[workspace.package]
version = "0.1.5-dev"

[workspace.dependencies]
# Internal crates
typst-bake = { version = "=0.1.5-dev", path = "typst-bake" }
typst-bake-macros = { version = "=0.1.5-dev", path = "typst-bake-macros" }

# Typst
typst = "0.14"
typst-pdf = "0.14"
typst-svg = "0.14"
typst-render = "0.14"
typst-syntax = "0.14"
typst-as-lib = "0.15"

# Proc macro
proc-macro2 = "1"
quote = "1"
syn = "2"

# Compression
zstd = "0.13"
flate2 = "1"
blake3 = "1"

# Error handling
thiserror = "2"

# Utilities
include_dir = "0.7"
ureq = "3.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
binstall-tar = "0.4"
toml = "0.9"
walkdir = "2"
dirs = "6"
fd-lock = "4.0"
