[package]
name = "typst-bake-macros"
version.workspace = true
edition = "2021"
description = "Procedural macros for typst-bake"
license = "MIT OR Apache-2.0"
repository = "https://github.com/elgar328/typst-bake"
keywords = ["typst", "pdf", "template", "macro"]
categories = ["template-engine"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
typst-syntax.workspace = true
ureq.workspace = true
flate2.workspace = true
binstall-tar.workspace = true
toml.workspace = true
walkdir.workspace = true
dirs.workspace = true
zstd.workspace = true
blake3.workspace = true
fd-lock.workspace = true
